--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by IntelliJ IDEA 10.5.1 for binding GitHub repository
+A simple project to demonstrate the use of Neo4J as a RDF tuple repository
